--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,7 +94,7 @@ extend-select = ["D", "E", "I", "N", "R", "W"]
 ignore = ["D105", "D205"]
 
 [tool.ruff.lint.pep8-naming]
-extend-ignore-names = ["Err", "NONE", "Ok", "Some"]
+#extend-ignore-names = ["Err", "NONE", "Ok", "Some"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["D103"]
