--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
+    "pyfakefs>=5.10.0",
     "pylint>=3.3.9",
     "pylint-per-file-ignores>=2.0.3",
     "pytest>=8.4.2",
